run codegen for additional fields
