# frontrunner_sdk/openapi/frontrunner_api/models/market.py
@@ -7,7 +7,7 @@
 
     This is a first draft of the FR External Market Maker API  # noqa: E501
 
-    OpenAPI spec version: 0.0.1
+    OpenAPI spec version: 0.1.0
     
     Generated by: https://github.com/swagger-api/swagger-codegen.git
 """
@@ -31,38 +31,72 @@ class Market(object):
     """
     swagger_types = {
         'id': 'str',
+        'league_id': 'str',
+        'league_name': 'str',
         'injective_id': 'str',
         'created': 'datetime',
         'updated': 'datetime',
         'long_entity_id': 'str',
+        'long_entity_name': 'str',
+        'long_entity_abbreviation': 'str',
         'short_entity_id': 'str',
+        'short_entity_name': 'str',
+        'short_entity_abbreviation': 'str',
         'status': 'MarketStatus',
-        'prop_id': 'str'
+        'prop_id': 'str',
+        'prop_name': 'ProppropertiespropType',
+        'sport_event_id': 'SportEventpropertiesid',
+        'sport_event_name': 'SportEventpropertiesname',
+        'sport_event_type': 'SportEventpropertieseventType'
     }
 
     attribute_map = {
         'id': 'id',
+        'league_id': 'leagueId',
+        'league_name': 'leagueName',
         'injective_id': 'injectiveId',
         'created': 'created',
         'updated': 'updated',
         'long_entity_id': 'longEntityId',
+        'long_entity_name': 'longEntityName',
+        'long_entity_abbreviation': 'longEntityAbbreviation',
         'short_entity_id': 'shortEntityId',
+        'short_entity_name': 'shortEntityName',
+        'short_entity_abbreviation': 'shortEntityAbbreviation',
         'status': 'status',
-        'prop_id': 'propId'
+        'prop_id': 'propId',
+        'prop_name': 'propName',
+        'sport_event_id': 'sportEventId',
+        'sport_event_name': 'sportEventName',
+        'sport_event_type': 'sportEventType'
     }
 
-    def __init__(self, id=None, injective_id=None, created=None, updated=None, long_entity_id=None, short_entity_id=None, status=None, prop_id=None):  # noqa: E501
+    def __init__(self, id=None, league_id=None, league_name=None, injective_id=None, created=None, updated=None, long_entity_id=None, long_entity_name=None, long_entity_abbreviation=None, short_entity_id=None, short_entity_name=None, short_entity_abbreviation=None, status=None, prop_id=None, prop_name=None, sport_event_id=None, sport_event_name=None, sport_event_type=None):  # noqa: E501
         """Market - a model defined in Swagger"""  # noqa: E501
         self._id = None
+        self._league_id = None
+        self._league_name = None
         self._injective_id = None
         self._created = None
         self._updated = None
         self._long_entity_id = None
+        self._long_entity_name = None
+        self._long_entity_abbreviation = None
         self._short_entity_id = None
+        self._short_entity_name = None
+        self._short_entity_abbreviation = None
         self._status = None
         self._prop_id = None
+        self._prop_name = None
+        self._sport_event_id = None
+        self._sport_event_name = None
+        self._sport_event_type = None
         self.discriminator = None
         self.id = id
+        if league_id is not None:
+            self.league_id = league_id
+        if league_name is not None:
+            self.league_name = league_name
         self.injective_id = injective_id
         if created is not None:
             self.created = created
@@ -70,11 +104,27 @@ class Market(object):
             self.updated = updated
         if long_entity_id is not None:
             self.long_entity_id = long_entity_id
+        if long_entity_name is not None:
+            self.long_entity_name = long_entity_name
+        if long_entity_abbreviation is not None:
+            self.long_entity_abbreviation = long_entity_abbreviation
         if short_entity_id is not None:
             self.short_entity_id = short_entity_id
+        if short_entity_name is not None:
+            self.short_entity_name = short_entity_name
+        if short_entity_abbreviation is not None:
+            self.short_entity_abbreviation = short_entity_abbreviation
         self.status = status
         if prop_id is not None:
             self.prop_id = prop_id
+        if prop_name is not None:
+            self.prop_name = prop_name
+        if sport_event_id is not None:
+            self.sport_event_id = sport_event_id
+        if sport_event_name is not None:
+            self.sport_event_name = sport_event_name
+        if sport_event_type is not None:
+            self.sport_event_type = sport_event_type
 
     @property
     def id(self):
@@ -98,6 +148,48 @@ class Market(object):
             raise ValueError("Invalid value for `id`, must not be `None`")  # noqa: E501
 
         self._id = id
+
+    @property
+    def league_id(self):
+        """Gets the league_id of this Market.  # noqa: E501
+
+
+        :return: The league_id of this Market.  # noqa: E501
+        :rtype: str
+        """
+        return self._league_id
+
+    @league_id.setter
+    def league_id(self, league_id):
+        """Sets the league_id of this Market.
+
+
+        :param league_id: The league_id of this Market.  # noqa: E501
+        :type: str
+        """
+
+        self._league_id = league_id
+
+    @property
+    def league_name(self):
+        """Gets the league_name of this Market.  # noqa: E501
+
+
+        :return: The league_name of this Market.  # noqa: E501
+        :rtype: str
+        """
+        return self._league_name
+
+    @league_name.setter
+    def league_name(self, league_name):
+        """Sets the league_name of this Market.
+
+
+        :param league_name: The league_name of this Market.  # noqa: E501
+        :type: str
+        """
+
+        self._league_name = league_name
 
     @property
     def injective_id(self):
@@ -190,6 +282,52 @@ class Market(object):
         self._long_entity_id = long_entity_id
 
     @property
+    def long_entity_name(self):
+        """Gets the long_entity_name of this Market.  # noqa: E501
+
+        The name of the SportEntity on the long side of the market  # noqa: E501
+
+        :return: The long_entity_name of this Market.  # noqa: E501
+        :rtype: str
+        """
+        return self._long_entity_name
+
+    @long_entity_name.setter
+    def long_entity_name(self, long_entity_name):
+        """Sets the long_entity_name of this Market.
+
+        The name of the SportEntity on the long side of the market  # noqa: E501
+
+        :param long_entity_name: The long_entity_name of this Market.  # noqa: E501
+        :type: str
+        """
+
+        self._long_entity_name = long_entity_name
+
+    @property
+    def long_entity_abbreviation(self):
+        """Gets the long_entity_abbreviation of this Market.  # noqa: E501
+
+        The abbreviation of the SportEntity on the long side of the market  # noqa: E501
+
+        :return: The long_entity_abbreviation of this Market.  # noqa: E501
+        :rtype: str
+        """
+        return self._long_entity_abbreviation
+
+    @long_entity_abbreviation.setter
+    def long_entity_abbreviation(self, long_entity_abbreviation):
+        """Sets the long_entity_abbreviation of this Market.
+
+        The abbreviation of the SportEntity on the long side of the market  # noqa: E501
+
+        :param long_entity_abbreviation: The long_entity_abbreviation of this Market.  # noqa: E501
+        :type: str
+        """
+
+        self._long_entity_abbreviation = long_entity_abbreviation
+
+    @property
     def short_entity_id(self):
         """Gets the short_entity_id of this Market.  # noqa: E501
 
@@ -211,6 +349,52 @@ class Market(object):
         """
 
         self._short_entity_id = short_entity_id
+
+    @property
+    def short_entity_name(self):
+        """Gets the short_entity_name of this Market.  # noqa: E501
+
+        The name of the SportEntity, if it exists, on the short side of the market  # noqa: E501
+
+        :return: The short_entity_name of this Market.  # noqa: E501
+        :rtype: str
+        """
+        return self._short_entity_name
+
+    @short_entity_name.setter
+    def short_entity_name(self, short_entity_name):
+        """Sets the short_entity_name of this Market.
+
+        The name of the SportEntity, if it exists, on the short side of the market  # noqa: E501
+
+        :param short_entity_name: The short_entity_name of this Market.  # noqa: E501
+        :type: str
+        """
+
+        self._short_entity_name = short_entity_name
+
+    @property
+    def short_entity_abbreviation(self):
+        """Gets the short_entity_abbreviation of this Market.  # noqa: E501
+
+        The abbreviation of the SportEntity, if it exists, on the short side of the market  # noqa: E501
+
+        :return: The short_entity_abbreviation of this Market.  # noqa: E501
+        :rtype: str
+        """
+        return self._short_entity_abbreviation
+
+    @short_entity_abbreviation.setter
+    def short_entity_abbreviation(self, short_entity_abbreviation):
+        """Sets the short_entity_abbreviation of this Market.
+
+        The abbreviation of the SportEntity, if it exists, on the short side of the market  # noqa: E501
+
+        :param short_entity_abbreviation: The short_entity_abbreviation of this Market.  # noqa: E501
+        :type: str
+        """
+
+        self._short_entity_abbreviation = short_entity_abbreviation
 
     @property
     def status(self):
@@ -255,6 +439,90 @@ class Market(object):
         """
 
         self._prop_id = prop_id
+
+    @property
+    def prop_name(self):
+        """Gets the prop_name of this Market.  # noqa: E501
+
+
+        :return: The prop_name of this Market.  # noqa: E501
+        :rtype: ProppropertiespropType
+        """
+        return self._prop_name
+
+    @prop_name.setter
+    def prop_name(self, prop_name):
+        """Sets the prop_name of this Market.
+
+
+        :param prop_name: The prop_name of this Market.  # noqa: E501
+        :type: ProppropertiespropType
+        """
+
+        self._prop_name = prop_name
+
+    @property
+    def sport_event_id(self):
+        """Gets the sport_event_id of this Market.  # noqa: E501
+
+
+        :return: The sport_event_id of this Market.  # noqa: E501
+        :rtype: SportEventpropertiesid
+        """
+        return self._sport_event_id
+
+    @sport_event_id.setter
+    def sport_event_id(self, sport_event_id):
+        """Sets the sport_event_id of this Market.
+
+
+        :param sport_event_id: The sport_event_id of this Market.  # noqa: E501
+        :type: SportEventpropertiesid
+        """
+
+        self._sport_event_id = sport_event_id
+
+    @property
+    def sport_event_name(self):
+        """Gets the sport_event_name of this Market.  # noqa: E501
+
+
+        :return: The sport_event_name of this Market.  # noqa: E501
+        :rtype: SportEventpropertiesname
+        """
+        return self._sport_event_name
+
+    @sport_event_name.setter
+    def sport_event_name(self, sport_event_name):
+        """Sets the sport_event_name of this Market.
+
+
+        :param sport_event_name: The sport_event_name of this Market.  # noqa: E501
+        :type: SportEventpropertiesname
+        """
+
+        self._sport_event_name = sport_event_name
+
+    @property
+    def sport_event_type(self):
+        """Gets the sport_event_type of this Market.  # noqa: E501
+
+
+        :return: The sport_event_type of this Market.  # noqa: E501
+        :rtype: SportEventpropertieseventType
+        """
+        return self._sport_event_type
+
+    @sport_event_type.setter
+    def sport_event_type(self, sport_event_type):
+        """Sets the sport_event_type of this Market.
+
+
+        :param sport_event_type: The sport_event_type of this Market.  # noqa: E501
+        :type: SportEventpropertieseventType
+        """
+
+        self._sport_event_type = sport_event_type
 
     def to_dict(self):
         """Returns the model properties as a dict"""
