# frontrunner_sdk/openapi/frontrunner_api/models/prop.py
@@ -7,7 +7,7 @@
 
     This is a first draft of the FR External Market Maker API  # noqa: E501
 
-    OpenAPI spec version: 0.0.1
+    OpenAPI spec version: 0.1.0
     
     Generated by: https://github.com/swagger-api/swagger-codegen.git
 """
@@ -31,37 +31,48 @@ class Prop(object):
     """
     swagger_types = {
         'id': 'str',
-        'league_id': 'str',
+        'league_id': 'Leaguepropertiesid',
+        'league_name': 'Leaguepropertiesname',
         'name': 'str',
         'prop_type': 'str',
         'created': 'datetime',
         'updated': 'datetime',
-        'sport_event_id': 'str'
+        'sport_event_id': 'SportEventpropertiesid',
+        'sport_event_name': 'SportEventpropertiesname',
+        'sport_event_type': 'SportEventpropertieseventType'
     }
 
     attribute_map = {
         'id': 'id',
         'league_id': 'leagueId',
+        'league_name': 'leagueName',
         'name': 'name',
         'prop_type': 'propType',
         'created': 'created',
         'updated': 'updated',
-        'sport_event_id': 'sportEventId'
+        'sport_event_id': 'sportEventId',
+        'sport_event_name': 'sportEventName',
+        'sport_event_type': 'sportEventType'
     }
 
-    def __init__(self, id=None, league_id=None, name=None, prop_type=None, created=None, updated=None, sport_event_id=None):  # noqa: E501
+    def __init__(self, id=None, league_id=None, league_name=None, name=None, prop_type=None, created=None, updated=None, sport_event_id=None, sport_event_name=None, sport_event_type=None):  # noqa: E501
         """Prop - a model defined in Swagger"""  # noqa: E501
         self._id = None
         self._league_id = None
+        self._league_name = None
         self._name = None
         self._prop_type = None
         self._created = None
         self._updated = None
         self._sport_event_id = None
+        self._sport_event_name = None
+        self._sport_event_type = None
         self.discriminator = None
         self.id = id
         if league_id is not None:
             self.league_id = league_id
+        if league_name is not None:
+            self.league_name = league_name
         self.name = name
         if prop_type is not None:
             self.prop_type = prop_type
@@ -71,6 +82,10 @@ class Prop(object):
             self.updated = updated
         if sport_event_id is not None:
             self.sport_event_id = sport_event_id
+        if sport_event_name is not None:
+            self.sport_event_name = sport_event_name
+        if sport_event_type is not None:
+            self.sport_event_type = sport_event_type
 
     @property
     def id(self):
@@ -101,7 +116,7 @@ class Prop(object):
 
 
         :return: The league_id of this Prop.  # noqa: E501
-        :rtype: str
+        :rtype: Leaguepropertiesid
         """
         return self._league_id
 
@@ -111,10 +126,31 @@ class Prop(object):
 
 
         :param league_id: The league_id of this Prop.  # noqa: E501
-        :type: str
+        :type: Leaguepropertiesid
         """
 
         self._league_id = league_id
+
+    @property
+    def league_name(self):
+        """Gets the league_name of this Prop.  # noqa: E501
+
+
+        :return: The league_name of this Prop.  # noqa: E501
+        :rtype: Leaguepropertiesname
+        """
+        return self._league_name
+
+    @league_name.setter
+    def league_name(self, league_name):
+        """Sets the league_name of this Prop.
+
+
+        :param league_name: The league_name of this Prop.  # noqa: E501
+        :type: Leaguepropertiesname
+        """
+
+        self._league_name = league_name
 
     @property
     def name(self):
@@ -214,7 +250,7 @@ class Prop(object):
 
 
         :return: The sport_event_id of this Prop.  # noqa: E501
-        :rtype: str
+        :rtype: SportEventpropertiesid
         """
         return self._sport_event_id
 
@@ -224,10 +260,52 @@ class Prop(object):
 
 
         :param sport_event_id: The sport_event_id of this Prop.  # noqa: E501
-        :type: str
+        :type: SportEventpropertiesid
         """
 
         self._sport_event_id = sport_event_id
+
+    @property
+    def sport_event_name(self):
+        """Gets the sport_event_name of this Prop.  # noqa: E501
+
+
+        :return: The sport_event_name of this Prop.  # noqa: E501
+        :rtype: SportEventpropertiesname
+        """
+        return self._sport_event_name
+
+    @sport_event_name.setter
+    def sport_event_name(self, sport_event_name):
+        """Sets the sport_event_name of this Prop.
+
+
+        :param sport_event_name: The sport_event_name of this Prop.  # noqa: E501
+        :type: SportEventpropertiesname
+        """
+
+        self._sport_event_name = sport_event_name
+
+    @property
+    def sport_event_type(self):
+        """Gets the sport_event_type of this Prop.  # noqa: E501
+
+
+        :return: The sport_event_type of this Prop.  # noqa: E501
+        :rtype: SportEventpropertieseventType
+        """
+        return self._sport_event_type
+
+    @sport_event_type.setter
+    def sport_event_type(self, sport_event_type):
+        """Sets the sport_event_type of this Prop.
+
+
+        :param sport_event_type: The sport_event_type of this Prop.  # noqa: E501
+        :type: SportEventpropertieseventType
+        """
+
+        self._sport_event_type = sport_event_type
 
     def to_dict(self):
         """Returns the model properties as a dict"""
