# frontrunner_sdk/openapi/frontrunner_api/models/sport_entity.py
@@ -7,7 +7,7 @@
 
     This is a first draft of the FR External Market Maker API  # noqa: E501
 
-    OpenAPI spec version: 0.0.1
+    OpenAPI spec version: 0.1.0
     
     Generated by: https://github.com/swagger-api/swagger-codegen.git
 """
@@ -34,7 +34,8 @@ class SportEntity(object):
         'name': 'str',
         'abbreviation': 'str',
         'updated': 'datetime',
-        'league_id': 'str'
+        'league_id': 'Leaguepropertiesid',
+        'league_name': 'Leaguepropertiesname'
     }
 
     attribute_map = {
@@ -42,16 +43,18 @@ class SportEntity(object):
         'name': 'name',
         'abbreviation': 'abbreviation',
         'updated': 'updated',
-        'league_id': 'leagueId'
+        'league_id': 'leagueId',
+        'league_name': 'leagueName'
     }
 
-    def __init__(self, id=None, name=None, abbreviation=None, updated=None, league_id=None):  # noqa: E501
+    def __init__(self, id=None, name=None, abbreviation=None, updated=None, league_id=None, league_name=None):  # noqa: E501
         """SportEntity - a model defined in Swagger"""  # noqa: E501
         self._id = None
         self._name = None
         self._abbreviation = None
         self._updated = None
         self._league_id = None
+        self._league_name = None
         self.discriminator = None
         self.id = id
         self.name = name
@@ -61,6 +64,8 @@ class SportEntity(object):
             self.updated = updated
         if league_id is not None:
             self.league_id = league_id
+        if league_name is not None:
+            self.league_name = league_name
 
     @property
     def id(self):
@@ -158,7 +163,7 @@ class SportEntity(object):
 
 
         :return: The league_id of this SportEntity.  # noqa: E501
-        :rtype: str
+        :rtype: Leaguepropertiesid
         """
         return self._league_id
 
@@ -168,10 +173,31 @@ class SportEntity(object):
 
 
         :param league_id: The league_id of this SportEntity.  # noqa: E501
-        :type: str
+        :type: Leaguepropertiesid
         """
 
         self._league_id = league_id
+
+    @property
+    def league_name(self):
+        """Gets the league_name of this SportEntity.  # noqa: E501
+
+
+        :return: The league_name of this SportEntity.  # noqa: E501
+        :rtype: Leaguepropertiesname
+        """
+        return self._league_name
+
+    @league_name.setter
+    def league_name(self, league_name):
+        """Sets the league_name of this SportEntity.
+
+
+        :param league_name: The league_name of this SportEntity.  # noqa: E501
+        :type: Leaguepropertiesname
+        """
+
+        self._league_name = league_name
 
     def to_dict(self):
         """Returns the model properties as a dict"""
